fixed double scroll bar issue on place new order

--- a/src/components/newOrderAdmin/newOrderAdmin.css
+++ b/src/components/newOrderAdmin/newOrderAdmin.css
@@ -32,7 +32,7 @@
   text-align: left;
 }
 .customersScroll {
-  max-height: 200px;
+  max-height: 180px;
   overflow-y: auto;
 }
 
